--- a/.gitignore
+++ b/.gitignore
@@ -348,3 +348,6 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+/out/build/x64-Debug/.cmake/api/v1
+/out/build/x64-Debug/CMakeFiles/3.15.19101501-MSVC_2
+/out/build/x64-Debug
