--- a/.gitignore
+++ b/.gitignore
@@ -351,3 +351,4 @@ MigrationBackup/
 /out/build/x64-Debug/.cmake/api/v1
 /out/build/x64-Debug/CMakeFiles/3.15.19101501-MSVC_2
 /out/build/x64-Debug
+/out/build/x64-Clang-Debug
