--- a/.gitignore
+++ b/.gitignore
@@ -352,3 +352,6 @@ MigrationBackup/
 /out/build/x64-Debug/CMakeFiles/3.15.19101501-MSVC_2
 /out/build/x64-Debug
 /out/build/x64-Clang-Debug
+/test/Testing/Temporary/CTestCostData.txt
+/test/.runsettings
+/Testing/Temporary/CTestCostData.txt
