CXNN uses pcg_random library for rng added CXNN unit test

--- a/Chip8/CMakeLists.txt
+++ b/Chip8/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(Chip8 "chip8.c" "chip8.h")
+add_library(Chip8 "chip8.c" "chip8.h" "pcg_basic.c" "pcg_basic.h")
 target_include_directories(Chip8
           INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}
           )
